--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImgUrl" class="control-label">Ảnh sản phẩm:</label>
-                <input type="file" asp-for="ImgUrl"  class="form-control" />
+                <input type="file" asp-for="ImgUrl" name="UpVideoUrl" class="form-control" />
                 <span asp-validation-for="ImgUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
