--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Update.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Update.cshtml
@@ -4,13 +4,30 @@
     ViewData["Title"] = "Update";
 }
 
-<h1>Update</h1>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- TinyMCE -->
+    <script src="https://cdn.tiny.cloud/1/tvv1fwf3cnhtvlfxql1sp92p7vuw7mk3gj167aahzkwc68d6/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: 'textarea#tiny',
+            plugins: [
+                'a11ychecker', 'advlist', 'advcode', 'advtable', 'autolink', 'checklist', 'markdown',
+                'lists', 'link', 'image', 'charmap', 'preview', 'anchor', 'searchreplace', 'visualblocks',
+                'powerpaste', 'fullscreen', 'formatpainter', 'insertdatetime', 'media', 'table', 'help', 'wordcount'
+            ],
+            toolbar: 'undo redo | a11ycheck casechange blocks | bold italic backcolor | alignleft aligncenter alignright alignjustify |' +
+                'bullist numlist checklist outdent indent | removeformat | code table help'
+        })
+    </script>
+</head>
 
-<h4>Lesson</h4>
+<h4>Lesson</h4
+
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Update">
+    <div class="col-md-8">
+        <form asp-action="Update" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="LessionId" />
            
@@ -21,10 +38,29 @@
             </div>
             <div class="form-group">
                 <label asp-for="LessonDescription" class="control-label"></label>
-                <input asp-for="LessonDescription" class="form-control" />
+                @* <input asp-for="LessonDescription" class="form-control" /> *@
+                <textarea id="tiny" name="LessonDescription" class="form-control">@Html.Raw(Model.LessonDescription)</textarea>
                 <span asp-validation-for="LessonDescription" class="text-danger"></span>
             </div>
-           
+           @* <div class="form-group mt-2">
+                <label asp-for="ImgUrl">Product Image</label>
+                <input type="file" asp-for="ImgUrl" class="form-control " id="imageInput" />
+                <video class="mt-2" src="@Model.ImgUrl" alt="Product Image" id="previewImage" /> 
+                <video class="mt-2" width="400" controls>
+                    <source src="@Model.ImgUrl" type="video/mp4" id="previewImage">
+                   
+                    Your browser does not support HTML video.
+                </video>
+            </div> *@
+           <div class="form-group mt-2">
+                <label asp-for="ImgUrl">Product Video</label>
+                <input type="file" asp-for="ImgUrl" class="form-control" id="videoInput" />
+                <video class="mt-2" width="400" controls id="previewVideo">
+                    <source src="@Model.ImgUrl" type="video/mp4">
+                    Your browser does not support HTML video.
+                </video>
+            </div
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -35,6 +71,28 @@
 <div>
     <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId">Back to list</a>
 </div>
+
+@* <script>
+    document.getElementById('imageInput').addEventListener('change', function (e) {
+        var output = document.getElementById('previewImage');
+        if (this.files && this.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                output.src = e.target.result;
+                output.style.display = 'block';
+            }
+
+            reader.readAsDataURL(this.files[0]);
+        }
+    })
+</script> *@
+<script>
+    document.getElementById('videoInput').addEventListener('change', function (e) {
+        var video = document.getElementById('previewVideo');
+        var videoUrl = URL.createObjectURL(this.files[0]);
+        video.src = videoUrl;
+    });
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
