--- a/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-            <a href="index.html" class="logo d-flex align-items-center me-auto">
-                <h1 class="">Quackdemy</h1>
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="logo d-flex align-items-center me-auto">
+                <h1 class="">NoName</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -37,9 +37,8 @@
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="about">About</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Courses">Courses</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Trainers">Trainers</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Event">Event</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+                        
+                   
                        @*  <li class="dropdown has-dropdown">
                             <a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down"></i></a>
                             <ul>
@@ -77,12 +76,12 @@
 
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="btn-getstarted" href="courses.html">Get Started</a>
+            <a class="btn-getstarted" asp-area="" asp-controller="Home" asp-action="Courses">Get Started</a>
             @* <a class="btn-getstarted" href="Login.html">Login</a> *@
             @* <partial name="_LoginPartial" /> *@
 
@@ -108,7 +107,7 @@
                         <i class="bi bi-box-arrow-right me-1"></i> Logout
                     </a> *@
                     <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
-                        <button type="submit" class="nav-link btn btn-link text-dark bi bi-box-arrow-right me-1">Logout</button>
+                        <button type="submit" class="nav-link btn btn-link text-dark bi bi-box-arrow-left me-1">  Logout</button>
                     </form>
                 }
                 else
@@ -119,7 +118,7 @@
                         <i class="bi bi-box-arrow-right me-1"></i> Logout
                     </a> *@
                     <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
-                        <button type="submit" class="nav-link btn btn-link text-dark bi bi-box-arrow-right me-1">Logout</button>
+                        <button type="submit" class="nav-link btn btn-link text-dark bi bi-box-arrow-left me-1">  Logout</button>
                     </form>
                 }
             }
@@ -179,13 +178,7 @@
                     <div class="col-lg-4 col-md-12 footer-newsletter">
                         <h4>Bản tin của chúng tôi</h4>
                         <p>Mọi thắc mắc xin nhắn tin riêng cho chúng tôi, phản hồi sẽ sớm nhất có thể!</p>
-                        <form action="forms/newsletter.php" method="post" class="php-email-form">
-                             @* coi lai doan nay  *@ 
-                            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-                        </form>
+                        
                     </div>
 
                 </div>
